# alfred-technical-interview

./: .gitignore  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: backend.py
backend/src/data-access/: duckdb_dao.py
backend/src/database/csvs/: bronze-properties.csv
backend/src/database/queries/: bronze_properties.sql  silver_properties.sql  silver_rentals.sql
database/: silver-rental.csv
frontend/: Dockerfile  package.json  pnpm-lock.yaml
