[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cleaner"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Antonino Cangialosi", email = "ninocangialosi@yahoo.it"},
]
dependencies = [
    "duckdb>=0.10.2",
    "flask>=3.0.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
